--- a/Dashbouard-master/Dashbouard-master/package.json
+++ b/Dashbouard-master/Dashbouard-master/package.json
@@ -34,6 +34,7 @@
     "ngx-toastr": "^14.2.1",
     "primeicons": "^5.0.0",
     "primeng": "^13.1.0",
+    "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "slider-angular": "^2.0.9",
     "tslib": "^2.3.0",
